Fix blurring transition for vmodal

--- a/src/components/style/vmodal.styl
+++ b/src/components/style/vmodal.styl
@@ -25,7 +25,7 @@ div.vmodal
 
 	&__overlay-transition
 		&-enter-active, &-leave-active
-			transition all 0.2s ease
+			transition opacity 0.2s ease
 
 		&-enter, &-leave-to
-			backdrop-filter blur(0px)
+			opacity 0
